monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4047/A4047d.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4047;

grammar A4047d {

    interface A = foo:"Foo";

    B implements A;
}